--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ button:hover, a:hover {
 <h2 style="text-align:center">User Profile Card</h2>
 
 <div class="card">
-  <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+  <!-- <img src="/w3images/team2.jpg" alt="Piyush" style="width:100%"> -->
   <h1>Piyush Roy</h1>
   <p class="title">Software Developer</p>
   <p>National Institute of Technology</p>
