--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ button:hover, a:hover {
     <!-- <img src="/w3images/team2.jpg" alt="Piyush" style="width:100%"> -->
     <h1>Piyush Roy</h1>
     <p class="title">Software Developer</p>
-    <p>National Institute of Technology</p>
+    <p>BITS Pilani (Pursing)</p>
     <div style="margin: 24px 0;">
       <a href="#"><i class="fa fa-dribbble"></i></a> 
       <a href="#"><i class="fa fa-twitter"></i></a>  
