--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 body {
   background-color: #F8F8FF;
+  font-family: arial;
 }
 
 /* Style the side navigation */
@@ -70,17 +71,14 @@ button:hover, a:hover {
 
 <div class="sidenav">
   <div class="card">
-    <!-- <img src="/w3images/team2.jpg" alt="Piyush" style="width:100%"> -->
     <h1>Piyush Roy</h1>
     <p class="title">Software Developer</p>
-    <p>BITS Pilani (Pursing)</p>
+    <p>National Institute of Technology, Durgapur</p>
     <div style="margin: 24px 0;">
-      <a href="#"><i class="fa fa-dribbble"></i></a> 
       <a href="#"><i class="fa fa-twitter"></i></a>  
       <a href="#"><i class="fa fa-linkedin"></i></a>  
       <a href="#"><i class="fa fa-facebook"></i></a> 
     </div>
-    <p><button>Contact</button></p>
   </div>
 </div>
 <div class="content">
