--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@ button:hover, a:hover {
 </style>
 </head>
 <body>
-
 <div class="sidenav">
   <div class="card">
     <h1>Piyush Roy</h1>
     <p class="title">Software Developer</p>
-    <p>National Institute of Technology, Durgapur</p>
+    <p>National Institute of Technology</p>
+    <p>Durgapur</p>
     <div style="margin: 24px 0;">
       <a href="#"><i class="fa fa-twitter"></i></a>  
       <a href="#"><i class="fa fa-linkedin"></i></a>  
